[Refactor] Update dependencies [Add] Support for executing actions in Hardware plugin
