# jvm/src/main/resources/swagger/swagger-config.yaml
@@ -900,7 +900,7 @@ paths:
         '401':
           description: Either invalid or no token was provided
 
-  /hardware/{hostname}:
+  /hardware/host:
     get:
       tags:
         - Hardware
@@ -910,7 +910,17 @@ paths:
         '200':
           description: A list of all Hosts that support the Hardware Extension
 
-  /hardware/{hostname}/cpufrequency:
+  /hardware/action:
+    get:
+      tags:
+        - Hardware
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: A list of all actions are registered in the Hardware Extension
+
+  /hardware/host/{hostname}/cpufrequency:
     get:
       tags:
         - Hardware
@@ -920,8 +930,18 @@ paths:
         '200':
           description: TODO
 
-  /hardware/{hostname}/sensors:
+  /hardware/host/{hostname}/sensors:
     get:
+      tags:
+        - Hardware
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+
+  /hardware/host/{hostname}/action/{action}:
+    post:
       tags:
         - Hardware
       security:
